2008-09-23  kitone  <kitone@gna.org>

	* configure.in:
	Switching back to development version.

2008-09-21  kitone  <kitone@gna.org>

	* NEWS:
	* configure.in:
	Preparing 0.24.0 release.

2008-09-20  kitone  <kitone@gna.org>

	* src/actions/errorchecking/ErrorCheckingPlugin.cc:
	* src/actions/errorchecking/MaxCharactersPerLine.h:
	* src/actions/errorchecking/MaxLinePerSubtitle.h:
	* src/actions/errorchecking/MinDisplayTime.h:
	* src/actions/errorchecking/MinGapBetweenSubtitles.h:
	* src/actions/errorchecking/Overlapping.h:
	* src/actions/errorchecking/TooLongDisplayTime.h:
	* src/actions/errorchecking/TooShortDisplayTime.h:
	Fix: bold messages by Luboš Staněk.

2008-09-20  kitone  <kitone@gna.org>

	* src/SubtitleView.cc:
	TimeCell derived to TextView widget.

2008-09-20  kitone  <kitone@gna.org>

	* src/actions/errorchecking/ErrorCheckingPlugin.cc:
	* src/actions/errorchecking/ErrorCheckingPreferences.h:
	Fix: dialog parent.

2008-09-20  kitone  <kitone@gna.org>

	* src/actions/errorchecking/ErrorCheckingPlugin.cc:
	* src/actions/errorchecking/MaxCharactersPerLine.h:
	* src/actions/errorchecking/MaxLinePerSubtitle.h:
	* src/actions/errorchecking/MinGapBetweenSubtitles.h:
	* src/actions/errorchecking/TooLongDisplayTime.h:
	* src/actions/errorchecking/TooShortDisplayTime.h:
	Fix: plurals messages (patch by Luboš Staněk)

2008-09-20  kitone  <kitone@gna.org>

	* share/glade/dialog-configure-keyboard-shortcuts.glade:
	* share/glade/dialog-error-checking-preferences.glade:
	Fix gtk-* string.

2008-09-20  kitone  <kitone@gna.org>

	* src/SubtitleView.cc:
	Fix the scroll of widget time (cell) as SpinButtonTime.

2008-09-20  kitone  <kitone@gna.org>

	* share/glade/dialog-preferences.glade:
	Fix typo.

	* src/actions/errorchecking/Overlapping.h:
	Fix typo. (bold)

2008-09-19  kitone  <kitone@gna.org>

	* share/glade/Makefile.am:
	Fix: missing files dialog-error-checking.glade and
	dialog-error-checking-preferences.glade.

2008-09-19  kitone  <kitone@gna.org>
